@@ -276,7 +276,9 @@ class sortByAltitude
 {
 	public:
 		sortByAltitude (struct ln_lnlat_posn *_observer = NULL, double _jd = rts2_nan ("f"));
-		bool operator () (Target *tar1, Target *tar2);
+		bool operator () (Target *tar1, Target *tar2) { return doSort (tar1, tar2); }
+	protected:
+		bool doSort (Target *tar1, Target *tar2);
 	private:
 		struct ln_lnlat_posn *observer;
 		double JD;
@@ -289,12 +291,13 @@ class sortWestEast
 {
 	public:
 		sortWestEast (struct ln_lnlat_posn *_observer = NULL, double _jd = rts2_nan ("f"));
-		bool operator () (Target *tar1, Target *tar2);
+		bool operator () (Target *tar1, Target *tar2) { return doSort (tar1, tar2); }
+	protected:
+		bool doSort (Target *tar1, Target *tar2);
 	private:
 		struct ln_lnlat_posn *observer;
 		double JD;
 };
-
 
 /**
  * Resolver for non-unique targetset names. Force targetset to contain all
