@@ -1,3 +1,6 @@
+2011-01-14
+ * QueuedTarget class
+
 2011-01-11
  * set api (HTTP-based)
 
